--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 Full-Stack Develope</h1>
    <img class="profile" src="images/profile.png" />
       <p class="paragraph">
-           I’m a software engineer with a passion for building dynamic, user-friendly web applications. My primary expertise is in JavaScript, and I also work with Python and PHP. I manage deployments and have solid DevOps experience with Docker, Jenkins, GitHub Actions, AWS, and Linux. I also leverage AI tools to boost productivity through prompt engineering. I’m an adaptable learner and thrive in collaborative environments to build outstanding apps.      </p>
+           I’m aaaa software engineer with a passion for building dynamic, user-friendly web applications. My primary expertise is in JavaScript, and I also work with Python and PHP. I manage deployments and have solid DevOps experience with Docker, Jenkins, GitHub Actions, AWS, and Linux. I also leverage AI tools to boost productivity through prompt engineering. I’m an adaptable learner and thrive in collaborative environments to build outstanding apps.      </p>
    <a href="images/Sat-kanha-FlowCV.pdf" class="gradient-btn" target="_blank">Check Resume</a>
    </div>
      <h2 class="skills-title">Technique Skills</h2>
