--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="center gap">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a>Email</a>
+      <a href="cover-letters.html">Cover Letters</a>
     </div>
     <div class="center-col">
       <h1 id="headingText" class="heading">Good Morning, Sat Kanha
@@ -16,7 +16,7 @@ Full-Stack Develope</h1>
    <img class="profile" src="images/profile.png" />
       <p class="paragraph">
            I’m a software engineer with a passion for building dynamic, user-friendly web applications. My primary expertise is in JavaScript, and I also work with Python and PHP. I manage deployments and have solid DevOps experience with Docker, Jenkins, GitHub Actions, AWS, and Linux. I also leverage AI tools to boost productivity through prompt engineering. I’m an adaptable learner and thrive in collaborative environments to build outstanding apps.      </p>
-   <a href="images/Sat-kanha-FlowCV.pdf" class="gradient-btn" target="_blank">Check Resume</a>
+   <a href="images/Sat-kanha-Resume.png.jpg" class="gradient-btn" target="_blank">Check Resume</a>
    </div>
      <h2 class="skills-title">Technique Skills</h2>
      <p class="paragraph">
@@ -27,54 +27,55 @@ Full-Stack Develope</h1>
           <h3 class="paragraph">Frontend</h3>
           <div class="paragraph">
             <span class="paragraph">React Js</span>
-            <span class="paragraph">Next Js</span>
-            <span class="paragraph">TypeScript</span>
-            <span class="paragraph">HTML</span>
-            <span class="paragraph">CSS</span>
-            <span class="paragraph">Tailwind CSS</span>
-            <span class="paragraph">JavaScript</span>
-            <span class="paragraph">Vue Js</span>
-            <span class="paragraph">Laravel</span>
+            <span class="paragraph">Next Js,</span>
+            <span class="paragraph">TypeScript,</span>
+            <span class="paragraph">HTML,</span>
+            <span class="paragraph">CSS,</span>
+            <span class="paragraph">Tailwind CSS,</span>
+            <span class="paragraph">JavaScript,</span>
+            <span class="paragraph">Vue Js,</span>
+            <span class="paragraph">,Laravel</span>
           </div>
         </div>
         <!-- Backend -->
         <div class="skill-card">
           <h3 class="paragraph">Backend</h3>
           <div class="paragraph">
-            <span class="paragraph">Node Js</span>
-            <span class="paragraph">Nest Js</span>
-            <span class="paragraph">Express Js</span>
-            <span class="paragraph">GraphQL</span>
-            <span class="paragraph">REST API</span>
-            <span class="paragraph">MongoDB</span>
-            <span class="paragraph">PostgreSQL</span>
-            <span class="paragraph">Supabase</span>
-            <span class="paragraph">Laravel</span>
-            <span class="paragraph">MySQL</span>
+            <span class="paragraph">Node Js,</span>
+            <span class="paragraph">Nest Js,</span>
+            <span class="paragraph">Express Js,</span>
+            <span class="paragraph">GraphQL,</span>
+            <span class="paragraph">REST API,</span>
+            <span class="paragraph">MongoDB,</span>
+            <span class="paragraph">PostgreSQL,</span>
+            <span class="paragraph">Supabase,</span>
+            <span class="paragraph">Laravel,</span>
+            <span class="paragraph">,MySQL</span>
           </div>
         </div>
         <!-- DevOps -->
         <div class="skill-card">
           <h3  class="paragraph">DevOps</h3>
           <div class="paragraph">
-            <span class="paragraph">AWS</span>
-            <span class="paragraph">Docker</span>
-            <span class="paragraph">Vercel</span>
-            <span class="paragraph">Nginx</span>
-            <span class="paragraph">Ansible</span>
-            <span class="paragraph">Jenkins</span>
-            <span class="paragraph">Kubernetes</span>
+            <span class="paragraph">AWS,</span>
+            <span class="paragraph">Docker,</span>
+            <span class="paragraph">Vercel,</span>
+            <span class="paragraph">Nginx,</span>
+            <span class="paragraph">Ansible,</span>
+            <span class="paragraph">Jenkins,</span>
+            <span class="paragraph">,Kubernetes</span>
           </div>
         </div>
         <!-- Tools -->
         <div class="skill-card">
           <h3 class="paragraph">Tools</h3>
           <div class="paragraph">
-            <span class="paragraph">Git</span>
-            <span class="paragraph">VSCode</span>
-            <span class="paragraph">Notion</span>
-            <span class="paragraph">Netlify</span>
-            <span class="paragraph">Postman</span>
+            <span class="paragraph">Git,</span>
+            <span class="paragraph">VSCode,</span>
+            <span class="paragraph">Notion,</span>
+            <span class="paragraph">Netlify,</span>
+            <span class="paragraph">Postman,</span>
+            <span class="paragraph">,Aavicat</span>
           </div>
         </div>
       </div>
@@ -97,7 +98,7 @@ Full-Stack Develope</h1>
         <div class="skill-card">
           <h3 class="paragraph">Sunrise Insitute</h3>
           <div class="paragraph">
-            <span class="paragraph">Internetional Web Developer</span>
+            <span class="paragraph">.Internetional Web Developer</span>
           </div>
         </div>
         </div>
