--- a/about.html
+++ b/about.html
@@ -8,28 +8,12 @@
     <div class="center gap">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a>Blogs</a>
+      <a href="cover-letters.html">Cover Letters</a>
     </div>
     <div class="center-col">
-      <img class="profile" src="images/profile.png" />
-      <h1 class="heading"></h1>
-      <p class="paragraph">
-        A Software Engineer is a professional who designs, develops, tests, and
-        maintains software systems using engineering principles
-      </p>
-      <div class="center gallery">
-        <img class="profile" src="images/images.png" />
-        <img class="profile" src="images/php.png" />
-        <img class="profile" src="images/Python.png" />
-      </div>
-      <p class="paragraph">
-        I would like to apply for the Developer position advertised in your
-        organization. I amconfident to state that I possess the required
-        academic qualifications and interest tocontribute to your team’s
-        development efforts.
-      </p>
-      <h1 class="heading underline">ABOUT Me</h1>
-      <img class=gallery1" src="images/photo.jpg" />
+      <h1 class="heading">Contact</h1>
+      <p class="paragraph">Have a question or opportunity? Let’s connect.</p>
+      <p href="email-link" class="paragraph">Email: satkanha321@gmail.com</p>
     </div>
   </body>
 </html>
