--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
       <h1 class="heading">Contact</h1>
       <p class="paragraph">Have a question or opportunity? Let’s connect.</p>
       <p href="email-link" class="paragraph">Email: satkanha321@gmail.com</p>
+      <p href="email-link" class="paragraph">Phone: 0963639756</p>
     </div>
   </body>
 </html>
